<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <TextView
        android:id="@+id/alert_dialog_fav_list_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/tv_fav_list_common"
        android:textSize="18sp"
        android:textColor="#4a4949"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alert_dialog_fav_list_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:hint="@string/tv_fav_list_common3"
        app:startIconDrawable="@drawable/ic_favourite_grey"
        app:startIconTint="#1A73E8"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog_fav_list_title_tv"
        app:layout_constraintStart_toStartOf="@id/alert_dialog_fav_list_title_tv"
        app:layout_constraintEnd_toEndOf="@id/alert_dialog_fav_list_title_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/alert_dialog_fav_list_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alert_dialog_fav_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog_fav_list_til"
        app:layout_constraintStart_toStartOf="@id/alert_dialog_fav_list_title_tv"
        app:layout_constraintEnd_toEndOf="@id/alert_dialog_fav_list_title_tv"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alert_dialog_fav_list_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav_cancel"
        android:textColor="#1A73E8"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog_fav_list_rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/alert_dialog_fav_list_add_btn"
        app:cornerRadius="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alert_dialog_fav_list_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav_add"
        android:textColor="#1A73E8"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/alert_dialog_fav_list_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/alert_dialog_fav_list_cancel_btn"
        app:cornerRadius="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>