<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="14dp">

    <View
        android:id="@+id/actv_fav_list_home_v"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_background_circular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1" />

    <ImageView
        android:id="@+id/actv_fav_list_home_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/actv_fav_list_home_v"
        app:layout_constraintBottom_toBottomOf="@+id/actv_fav_list_home_v"
        app:layout_constraintStart_toStartOf="@+id/actv_fav_list_home_v"
        app:layout_constraintEnd_toEndOf="@+id/actv_fav_list_home_v"/>

    <TextView
        android:id="@+id/actv_fav_list_home_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/tv_fav_list_home"
        android:textSize="16sp"
        android:textColor="#1A73E8"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/actv_fav_list_home_v"
        app:layout_constraintStart_toEndOf="@id/actv_fav_list_home_v"/>

    <TextView
        android:id="@+id/actv_fav_list_home_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fav_list_home2"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/actv_fav_list_home_tv"
        app:layout_constraintStart_toStartOf="@id/actv_fav_list_home_tv"/>

    <View
        android:id="@+id/actv_fav_list_work_v"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_background_circular"
        app:layout_constraintTop_toBottomOf="@id/actv_fav_list_home_v"
        app:layout_constraintStart_toStartOf="@id/actv_fav_list_home_v"
        app:layout_constraintDimensionRatio="1:1" />

    <ImageView
        android:id="@+id/actv_fav_list_work_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_work"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/actv_fav_list_work_v"
        app:layout_constraintBottom_toBottomOf="@+id/actv_fav_list_work_v"
        app:layout_constraintStart_toStartOf="@+id/actv_fav_list_work_v"
        app:layout_constraintEnd_toEndOf="@+id/actv_fav_list_work_v"/>

    <TextView
        android:id="@+id/actv_fav_list_work_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/tv_fav_list_work"
        android:textSize="16sp"
        android:textColor="#1A73E8"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/actv_fav_list_work_v"
        app:layout_constraintStart_toEndOf="@id/actv_fav_list_work_v"/>

    <TextView
        android:id="@+id/actv_fav_list_work_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fav_list_work2"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/actv_fav_list_work_tv"
        app:layout_constraintStart_toStartOf="@id/actv_fav_list_work_tv"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actv_fav_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/actv_fav_list_work_iv"
        app:layout_constraintStart_toStartOf="@id/actv_fav_list_work_iv"
        app:layout_constraintEnd_toEndOf="@id/actv_fav_list_work_iv"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actv_fav_list_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:backgroundTint="#1A73E8"
        android:src="@drawable/ic_fab_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@null"/>



</androidx.constraintlayout.widget.ConstraintLayout>