<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.osmdroid.views.MapView
        android:id="@+id/actv_main_mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/actv_main_startingpoint_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_startingpoint"
            app:startIconDrawable="@drawable/ic_location"
            app:startIconTint="@color/starting_point_yellow"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actv_main_startingpoint_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/actv_main_destination_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_destination"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_location"
            app:startIconTint="@color/destination_red"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/actv_main_startingpoint_til"
            app:layout_constraintStart_toStartOf="@id/actv_main_startingpoint_til"
            app:layout_constraintEnd_toEndOf="@id/actv_main_startingpoint_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actv_main_destination_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actv_main_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".7"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/actv_main_destination_til"
            app:layout_constraintStart_toStartOf="@id/actv_main_startingpoint_til"
            app:layout_constraintEnd_toEndOf="@id/actv_main_startingpoint_til"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:elevation="6dp"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/actv_main_search_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".7">

        <TextView
            android:id="@+id/actv_main_distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_distance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/actv_main_duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_duration"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/actv_main_distance_tv"
            app:layout_constraintStart_toStartOf="@id/actv_main_distance_tv"/>

        <TextView
            android:id="@+id/actv_main_ETA_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ETA"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/actv_main_duration_tv"
            app:layout_constraintStart_toStartOf="@id/actv_main_distance_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actv_main_search_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:elevation="6dp"
        app:icon="@drawable/ic_search"
        app:iconTint="#1A73E8"
        app:iconSize="24dp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio=".9:1"
        app:layout_constraintHeight_percent=".08"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actv_main_fav_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:elevation="6dp"
        app:icon="@drawable/ic_favourite"
        app:iconTint="#1A73E8"
        app:iconSize="24dp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/actv_main_search_btn"
        app:layout_constraintBottom_toTopOf="@id/actv_main_search_btn"
        app:layout_constraintDimensionRatio=".9:1"
        app:layout_constraintHeight_percent=".08"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actv_main_gps_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#1A73E8"
        android:elevation="6dp"
        app:icon="@drawable/ic_gps_white"
        app:iconTint="@color/white"
        app:iconSize="24dp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/actv_main_search_btn"
        app:layout_constraintBottom_toTopOf="@id/actv_main_fav_btn"
        app:layout_constraintDimensionRatio=".9:1"
        app:layout_constraintHeight_percent=".08"/>


</androidx.constraintlayout.widget.ConstraintLayout>